--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
       android:theme="@style/Theme.Opengl_es"
       tools:targetApi="31">
     <activity
+        android:name=".activities.CameraActivity"
+        android:exported="false" />
+    <activity
         android:name=".activities.CubeActivity"
         android:exported="false" />
     <activity
